# Agentic-Trade-v2

./: .gitignore  data.json  main.py  processed_data.json  side.txt
agents/analysis/: fundamental_analyst.py  market_analyst.py  news_analyst.py  sector_analyst.py  (+1 more)
api/: main.py  validators.py
backend/: .env.example  pyproject.toml
backend/agents/: base_agent.py
backend/agents/analysis/: fundamental_analyst.py  market_analyst.py  news_analyst.py  sector_analyst.py  technical_analyst.py
backend/api/: main.py  models.py  routes.py  utils.py  validators.py
backend/config/: settings.py
backend/core/: constants.py  error.py  logging.py  yf_context.py
backend/graph/: builder.py  nodes.py  state.py
backend/prompts/: fundamental_analyst_prompt.yaml  news_analyst_prompt.yaml  sector_analyst_prompt.yaml  sector_resolver_prompt.yaml
backend/service/: analyzer_service.py  cloudinary_service.py
backend/tools/: chart_tools.py  data_preftech.py  data_processor.py  fundamental_tools.py  market_tools.py  news_tools.py  sector_tools.py  technical_tools.py
backend/tools/utils/: fundamental_tool_helper.py  market_tool_helper.py  news_tool_helper.py  retry_utils.py  sector_tool_helper.py  technical_tool_helper.py
config/: settings.py
frontend/: .gitignore  package-lock.json  package.json
graph/: builder.py  nodes.py
prompts/: market_analyst_prompt.yaml  technical_analyst_prompt.yaml
service/: pdf_service.py
tools/: data_preftech.py  data_processor.py  fundamental_tools.py  market_tools.py  news_tools.py  sector_tools.py  technical_tools.py
(+20 files in other folders)
