[project]
name = "agentic-trade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "feedparser>=6.0.12",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.1.8",
    "ta>=0.11.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.46.0",
    "yfinance>=1.3.0",
    "cloudinary>=1.36.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "slowapi>=0.1.9",
]
